--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -2822,7 +2822,7 @@ paths:
                 user:
                   type: string
                   example: usr_qoGndHzx8KwdYsEByt9X
-                  description: User to whom the license belongs to.
+                  description: User to whom the license belongs.
                 type:
                   type: object
                   properties:
@@ -2830,12 +2830,14 @@ paths:
                       type: string
                   required:
                     - code
-                  description: The license type.
+                  description:
+                    The type of clinical license.  If you have a need for a license type that is not
+                    supported, please don’t hesitate to reach out to Source.
                 region:
                   type: string
                   description:
-                    Region the license is associated with. This is represented as an ISO-3166-2:US
-                    code
+                    Region with which the license is associated.  This is represented as an
+                    ISO-3166-2:US code. For example, "US-NY".
                   example: US-NY
                 license_number:
                   type: string
@@ -6974,7 +6976,7 @@ components:
         id:
           type: string
           example: appt_mTvufYJBBgYmbEAEZ6rE
-          description: Unique ID for the Appointment.
+          description: Unique ID for the appointment.
         appointment_type:
           oneOf:
             - type: string
@@ -7192,7 +7194,7 @@ components:
         id:
           type: string
           example: aptp_meYUvkuaI2akjnb5Kwt7
-          description: Unique ID for the Appointment Type.
+          description: Unique ID for the appointment type.
         key:
           type: string
           minLength: 1
@@ -7370,11 +7372,11 @@ components:
             properties:
               code:
                 type: string
-                description: Code for the license type.
+                description: Code for the license type. For example, "MD".
                 example: MD
               description:
                 type: string
-                description: Full description of the license type.
+                description: Description of the license type. For example, "Doctor of Medcine".
                 example: Doctor of Medicine
             required:
               - code
@@ -7452,7 +7454,7 @@ components:
         id:
           type: string
           example: avl_LNfPSf5xUwBT7LDSA3YQ
-          description: Unique ID for the Availability.
+          description: Unique ID for the availability.
         user:
           oneOf:
             - type: string
@@ -7749,7 +7751,7 @@ components:
         id:
           type: string
           example: dev_79Dek9tjwNUZqMWU576Q
-          description: Unique ID for the Device.
+          description: Unique ID for the device.
         member:
           oneOf:
             - type: string
@@ -8100,7 +8102,7 @@ components:
         id:
           type: string
           example: grp_IlGhgsstvgsagl6lV89Q
-          description: Unique ID for the Group.
+          description: Unique ID for the group.
         name:
           type: string
           maxLength: 255
@@ -8158,34 +8160,37 @@ components:
         id:
           type: string
           example: lic_R8qQYHFZO6dTjOBxHAda
-          description: Unique ID for the License.
+          description: Unique ID for the license.
         user:
           oneOf:
             - type: string
             - $ref: "#/components/schemas/user"
           x-expandable:
             $ref: "#/components/schemas/user"
-          description: User to whom the license belongs to.
+          description: User to whom the license belongs.
           example: usr_NC6MQ3FyxddKoJJpfSVL
         type:
           type: object
           properties:
             code:
               type: string
-              description: Code for the license type.
+              description: Code for the license type. For example, "MD".
               example: MD
             description:
               type: string
-              description: Full description of the license type.
+              description: Description of the license type. For example, "Doctor of Medcine".
               example: Doctor of Medicine
           required:
             - code
             - description
-          description: The license type.
+          description:
+            The type of clinical license.  If you have a need for a license type that is not
+            supported, please don’t hesitate to reach out to Source.
         region:
           type: string
           description:
-            Region the license is associated with. This is represented as an ISO-3166-2:US code
+            Region with which the license is associated.  This is represented as an ISO-3166-2:US
+            code. For example, "US-NY".
           example: US-NY
         license_number:
           type: string
@@ -8232,11 +8237,10 @@ components:
         body has granted the license.
 
 
-        Source uses licenses to guide automatic routing of tasks and appointments, for example, for
-        the task and appointment types you configure to require licensure.  Source compares a user's
-        license region with the member's address region to evaluate appropriate licensure.  Each
-        user can have any number of licenses. Licenses can be created, updated, and deleted for a
-        user.
+        Source uses licenses to guide, for example, automatic routing of tasks and appointments
+        configured to require licensure.  Source compares a user's license region with the member's
+        address region to evaluate appropriate licensure.  Each user can have any number of
+        licenses. Licenses can be created, updated, and deleted for a user.
       x-resourceId: license
       x-package: null
       x-preview: true
@@ -8368,7 +8372,7 @@ components:
         id:
           type: string
           example: mem_5QW8j1oKqQjNaPk4Hv3f
-          description: Unique ID for the Member.
+          description: Unique ID for the member.
         title:
           type: string
           nullable: true
@@ -9039,7 +9043,7 @@ components:
         id:
           type: string
           example: que_6NGuKD4KdMCGXLP6uBda
-          description: Unique ID for the Queue.
+          description: Unique ID for the queue.
         name:
           type: string
           maxLength: 255
@@ -9244,7 +9248,7 @@ components:
         id:
           type: string
           example: task_vAJyHgJ2VYwaYczijn9M
-          description: Unique ID for the Task.
+          description: Unique ID for the task.
         definition:
           oneOf:
             - type: string
@@ -9404,7 +9408,7 @@ components:
         id:
           type: string
           example: tskd_2Lc2yr7YIYxfN3RCSlBU
-          description: Unique ID for the Task Definition.
+          description: Unique ID for the task definition.
         key:
           type: string
           description:
@@ -9445,11 +9449,11 @@ components:
             properties:
               code:
                 type: string
-                description: Code for the license type.
+                description: Code for the license type. For example, "MD".
                 example: MD
               description:
                 type: string
-                description: Full description of the license type.
+                description: Description of the license type. For example, "Doctor of Medcine".
                 example: Doctor of Medicine
             required:
               - code
@@ -9726,7 +9730,7 @@ components:
         id:
           type: string
           example: usr_qoGndHzx8KwdYsEByt9X
-          description: Unique ID for the User.
+          description: Unique ID for the user.
         first_name:
           type: string
           nullable: true
