Pushing v123 from API 903141509649c305ac7a0b0619d420c62f876642

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -4939,7 +4939,8 @@ paths:
       summary: Create a Task
       description:
         Creates a new task and registers it with Source. Once a task is created you cannot update
-        the definition or member associated with that task.
+        the definition or member associated with that task. Note that you cannot create a task using
+        system-managed task definitions (those with keys starting with system).
       tags:
         - Task
       parameters: []
@@ -5296,7 +5297,8 @@ paths:
 
 
         Any parameters not provided will be left unchanged. For example, if you pass the assignee
-        parameter, that assigns the task to the given user.
+        parameter, that assigns the task to the given user. Note that you cannot resolve
+        system-managed tasks (those with `managed` set to `true`).
       tags:
         - Task
       parameters:
@@ -5466,10 +5468,10 @@ paths:
                   nullable: true
                   description:
                     The user license(s) that are required to perform tasks of this type. Automatic
-                    task routing by Source respects licensing.  If more than one license code is
-                    provided, a licensed user with any of the license codes can perform this
-                    task.  Providing any value will override the entire array. Providing null or an
-                    empty array will empty out the array.
+                    task routing by Source respects licensing. If more than one license code is
+                    provided, a licensed user with any of the license codes can perform this task.
+                    Providing any value will override the entire array. Providing null or an empty
+                    array will empty out the array.
                   example:
                     - code: MD
               required:
@@ -5675,10 +5677,10 @@ paths:
                   nullable: true
                   description:
                     The user license(s) that are required to perform tasks of this type. Automatic
-                    task routing by Source respects licensing.  If more than one license code is
-                    provided, a licensed user with any of the license codes can perform this
-                    task.  Providing any value will override the entire array. Providing null or an
-                    empty array will empty out the array.
+                    task routing by Source respects licensing. If more than one license code is
+                    provided, a licensed user with any of the license codes can perform this task.
+                    Providing any value will override the entire array. Providing null or an empty
+                    array will empty out the array.
                   example:
                     - code: MD
       responses:
@@ -9323,6 +9325,12 @@ components:
             `indirect`. When an assignee is specified through the API or by a user in the interface,
             the value of this property will be `direct`.
           example: direct
+        managed:
+          type: boolean
+          description:
+            Whether or not the task is managed automatically by Source. If a task is managed, only
+            Source can resolve or create the task. You can still update other properties of the
+            task."
         created_at:
           type: string
           format: date-time
@@ -9374,6 +9382,7 @@ components:
         - description
         - status
         - assignment_method
+        - managed
         - created_at
         - updated_at
         - due_at
@@ -9460,13 +9469,19 @@ components:
               - description
           description:
             The user license(s) that are required to perform tasks of this type. Automatic task
-            routing by Source respects licensing.  If more than one license code is provided, a
-            licensed user with any of the license codes can perform this task.  Providing any value
+            routing by Source respects licensing. If more than one license code is provided, a
+            licensed user with any of the license codes can perform this task. Providing any value
             will override the entire array. Providing null or an empty array will empty out the
             array.
           example:
             - code: MD
               description: Doctor of Medicine
+        managed:
+          type: boolean
+          description:
+            Whether or not tasks are managed automatically by Source. Only Source can create tasks
+            with managed task definitions, and those tasks may only be resolved by Source.
+          example: false
         created_at:
           type: string
           format: date-time
@@ -9485,6 +9500,7 @@ components:
         - queue
         - care_team_role
         - license_types
+        - managed
         - created_at
         - updated_at
       title: Task Definition
